updated go files

--- a/src/main/resources/index-dev.html
+++ b/src/main/resources/index-dev.html
@@ -4,10 +4,10 @@
   <title>Example Scala.js application</title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 </head>
-<body style="margin: 0px">
+<body style="margin: 0">
 
 <div>
-    <canvas style="display: block" id="canvas" width="255" height="255"/>
+    <canvas style="display: block; background-image:url(Wood_Texture_by_truefreestyle.jpg)" id="canvas" width="600" height="600"/>
 </div>
 
 <script type="text/javascript" src="../example-fastopt.js"></script>
