changed window title

--- a/src/main/resources/index-dev.html
+++ b/src/main/resources/index-dev.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Example Scala.js application</title>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <title>Scala.js go game</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 </head>
-<body style="margin: 0">
+<body style="margin: 0px">
 
 <div>
-    <canvas style="display: block; background-image:url(Wood_Texture_by_truefreestyle.jpg)" id="canvas" width="600" height="600"/>
+    <canvas style="display: block; background-image:url(Wood_Texture_by_truefreestyle.jpg)" id="canvas" width="500" height="500"/>
 </div>
 
 <script type="text/javascript" src="../example-fastopt.js"></script>
